--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= 'TODO!'
+    title= title
     link(rel='stylesheet', href='stylesheets/styles.css')
   body(ng-app='respTodo')
     block content
