Developing list API with dummy data

--- a/views/list.jade
+++ b/views/list.jade
@@ -1,4 +1,4 @@
-section(ng-repeat='category in categories')
+section(ng-repeat='category in list')
   h3: span {{category.text}}
   h5(ng-if='$first') completed?
   ol
