--- a/views/header.jade
+++ b/views/header.jade
@@ -1,6 +1,10 @@
 header
-  a.go-to-nav(href='#')
-    img(src='http://files.danbowles.com/assets/svg/hamburger-icon.svg')
+  div#task-entry
+    input(type='text')
+    button +
+  div.go-to-nav
+    a(href='#')
+      img(src='assets/hamburger-icon-32.svg')
   nav
     ul
       li: a.all.is-active(href='#') All Tasks
