--- a/views/header.jade
+++ b/views/header.jade
@@ -1,6 +1,6 @@
 header
   div#task-entry
-    input(type='text')
+    input(type='text', placeholder='Almost forgot to...')
     button +
   div.go-to-nav
     a(href='#')
