--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -8,9 +8,9 @@
     background: $nav-hamburger-background;
     
     img {
-      vertical-align: middle;
-      max-width: 80%;
-      margin-left: 3px;
+      margin: auto;
+      display: block;
+      padding-top: 6px;
     }
   }
   
