--- a/views/header.jade
+++ b/views/header.jade
@@ -2,6 +2,7 @@ header
   div#task-entry
     input(type='text', placeholder='Almost forgot to...')
     button +
+      span &nbsp;Add
   div.go-to-nav
     a(href='#')
       img(src='assets/hamburger-icon-32.svg')
