--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -60,9 +60,14 @@ body {
   #task-entry {
     position: absolute;
     z-index: 1;
-    width: 85%;
+    width: 90%;
     text-align: right;
     right: 0;
+    
+    @media (min-width: $bp-narrow-plus-1) {
+      width: 100%;
+      background: #eeeeee;
+    }
     
     button {
       position: absolute;
@@ -75,6 +80,18 @@ body {
       font-weight: bold;
       border: none;
       font-size: 1.3em;
+      
+      @media (min-width: $bp-narrow) {
+        width: 85px;
+      }
+      
+      &>span {
+        display: none;
+        
+        @media (min-width: $bp-narrow) {
+          display: inline;
+        }
+      }
     }
     
     input {
@@ -84,10 +101,14 @@ body {
       }
       width: 100%;
       border: none;
-      padding: 11px 0 12px;
+      padding: 11px 57px 12px 5%;
       background: transparent;
       @include box-sizing(border-box);
       font-size: 1.4em;
+      
+      @media (min-width: $bp-narrow) {
+        padding-right: 97px;
+      }
     }
   }
   
