--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,3 +14,4 @@ html
     script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js')
     script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js')
     script(src='scripts/app.js')
+    script(src='scripts/controllers/todoCtrl.js')
