--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html
     meta(name='viewport', content='initial-scale=1')
     title= title
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Rokkitt:400,700')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Shadows+Into+Light')
+    link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Gloria+Hallelujah')
     link(rel='stylesheet', href='stylesheets/styles.css')
   body(ng-app='respTodo')
     section(id='mainApp', ng-controller='TodoCtrl')
