--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -466,16 +466,19 @@ nav li a span {
 }
 /* line 65, ../../sass/partials/_list.scss */
 .list-content ol > li span {
+  font-family: 'Gloria Hallelujah', cursive;
+  color: #444444;
+  font-size: 1.2em;
   border-bottom: 1px solid #99A3A5;
   display: block;
   margin: 0 2.5em;
-  padding: 10px;
+  padding: 0 10px 10px;
 }
-/* line 71, ../../sass/partials/_list.scss */
+/* line 74, ../../sass/partials/_list.scss */
 .list-content ol > li input[type=checkbox] {
   visibility: hidden;
 }
-/* line 75, ../../sass/partials/_list.scss */
+/* line 78, ../../sass/partials/_list.scss */
 .list-content ol > li label {
   cursor: pointer;
   position: absolute;
@@ -487,7 +490,7 @@ nav li a span {
   border: 3px solid #b89335;
   background: transparent;
 }
-/* line 86, ../../sass/partials/_list.scss */
+/* line 89, ../../sass/partials/_list.scss */
 .list-content ol > li label:after {
   content: '';
   position: absolute;
@@ -506,9 +509,15 @@ nav li a span {
   background: transparent;
   opacity: 0;
 }
-/* line 102, ../../sass/partials/_list.scss */
+/* line 105, ../../sass/partials/_list.scss */
 .list-content ol > li input[type=checkbox]:checked + label:after {
   opacity: 1;
+}
+/* line 111, ../../sass/partials/_list.scss */
+.list-content .done-checkbox {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 /* line 34, ../../sass/styles.scss */
